objects/LAT_KeyBrand__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the record is available</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ImageURL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>KeyBrand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Key__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brasil</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>ExternalId__c</columns>
        <columns>Key__c</columns>
        <columns>ImageURL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ExternalId__c</field>
            <operation>startsWith</operation>
            <value>1-</value>
        </filters>
        <label>Brasil</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KeyBrands</pluralLabel>
    <recordTypes>
        <fullName>LAT_AR_Standard</fullName>
        <active>true</active>
        <label>AR Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_BR_Standard</fullName>
        <active>true</active>
        <label>BR Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_Standard</fullName>
        <active>true</active>
        <label>MX Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_UY_Standard</fullName>
        <active>true</active>
        <label>UY Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>